--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     .bgimg-1 {
         background-position: center;
         background-size: cover;
-        background-image: url("/w3images/mac.jpg");
+        background-image: url("images/manBroadArms.jpg");
         min-height: 100%;
     }
 
@@ -42,7 +42,7 @@
     <div class="w3-top">
         <div class="w3-bar w3-white w3-card" id="myNavbar">
             <img src="images/KMHLogo.png" href="#home" class="w3-bar-item w3-button w3-wide"
-                style="width:80px;height:80px;">
+                style="width:80px;height:60px;">
             <!-- Right-sided navbar links -->
             <div class="w3-right w3-hide-small">
                 <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
