added some routing

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <a href="#merch" class="w3-bar-item w3-button"><i class="fa fa-user"></i> MERCH</a>
                 <a href="#signUp" class="w3-bar-item w3-button"><i class="fa fa-th"></i> SIGN UP</a>
                 <a href="#pricing" class="w3-bar-item w3-button"><i class="fa fa-usd"></i> PRICING</a>
-                <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
+                <a href="contact.html" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
             </div>
             <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -104,8 +104,8 @@
     <!-- Header with full-height image -->
     <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
         <div class="w3-display-left w3-text-white" style="padding:48px">
-            <span class="w3-jumbo w3-hide-small">Start something that matters</span><br>
-            <span class="w3-xxlarge w3-hide-large w3-hide-medium">Start something that matters</span><br>
+            <span class="w3-jumbo w3-hide-small">KM Health and Fitness</span><br>
+            <span class="w3-xxlarge w3-hide-large w3-hide-medium">KM Health and Fitness</span><br>
             <span class="w3-large">Stop wasting valuable time with projects that just isn't you.</span>
             <p><a href="#about"
                     class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn
@@ -122,9 +122,9 @@
     </header>
 
     <!-- About Section -->
-    <div class="w3-container" style="padding:128px 16px" id="about">
+    <div class="w3-container" style="padding:70px 16px" id="about">
         <h3 class="w3-center">ABOUT THE COMPANY</h3>
-        <p class="w3-center w3-large">Key features of our company</p>
+        <p class="w3-center w3-large">Key principles of our company</p>
         <div class="w3-row-padding w3-center" style="margin-top:64px">
             <div class="w3-third">
                 <i class="fas fa-fire-alt w3-margin-bottom w3-jumbo"></i>
@@ -160,12 +160,14 @@
             </p>
             <p class="w3-large">One on one advice and guidance whenever its required, sometimes we all need that push
                 when we feel that plateau.</p>
+            <br>
+            <p>All at an affordable cost.</p>
         </div>
     </div>
     <div class="parallax1"></div>
 
     <!-- Promo Section - "We know design" -->
-    <div class="w3-container w3-light-grey" style="padding:128px 16px">
+    <div class="w3-container w3-light-grey" style="padding:70px 16px">
         <div class="w3-row-padding">
             <div class="w3-col m6">
                 <h3>We know fitness.</h3>
@@ -181,7 +183,7 @@
     </div>
     <div class="parallax2"></div>
     <!-- Team Section -->
-    <div class="w3-container" style="padding:128px 16px" id="team">
+    <div class="w3-container" style="padding:70px 16px" id="team">
         <h3 class="w3-center">THE TEAM</h3>
         <p class="w3-center w3-large">The ones who runs this company</p>
         <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
